--- a/app/views/spree/checkout/rbk_checkout_payment.html.erb
+++ b/app/views/spree/checkout/rbk_checkout_payment.html.erb
@@ -1,3 +1,12 @@
+<p> Отсюда пойдем на РБК, но не сейчас</p>
+<form method="POST" action="<%= rbk_checkout_success_url %>">
+  <%= hidden_field_tag :cart_order_id, @order.number %>
+  <input type="submit" name="send_form" value="Submit">
+</form>
+
+
+
+
 <% pm=@order.payment_method %>
     <form method="POST" id='paymentForm' action="https://www.2checkout.com/checkout/spurchase">
       <%= hidden_field_tag :sid, pm.preferred(:sid) %>
@@ -39,14 +48,11 @@
       <%= hidden_field_tag 'c_price_' + i.to_s, line_item.price %>
       <% i += 1 %>
       <% end %>
-    <p>
-        You are being redirected to 2Checkout- please wait.
-    </p>
 
-        <p>If you do not get redirected, please press the button below to submit your payment.</p>
-        <input type="submit" name="send_form" value="Submit">
+        <!--<p>If you do not get redirected, please press the button below to submit your payment.</p>-->
+        <!--<input type="submit" name="send_form" value="Submit">-->
     </form>
 
  <script type="text/javascript">
-     $('#paymentForm').submit();
+//     $('#paymentForm').submit();
  </script>
