--- a/app/views/spree/admin/payments/source_views/_rbkcheckout.html.erb
+++ b/app/views/spree/admin/payments/source_views/_rbkcheckout.html.erb
@@ -1,9 +1,9 @@
 <fieldset>
-  <legend>2Checkout</legend>
+  <legend>RBKMoney</legend>
 
   <table class="index">
     <tr>
-      <th colspan="6">Payment Details - 2Checkout </th>
+      <th colspan="6">Payment Details - RBK Money </th>
     </tr>
     <tr>
       <td><label>Amount:</label></td>
